# mimo-mcp

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .env.example  .formatter.exs  .git_commit_msg  .gitignore  .tool-versions  AGENTS.md  ARCHITECTURE.md  Agents.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_VERIFICATION.md  Dockerfile  Dockerfile.dev  FINAL_CORRECTED_ASSESSMENT.md  FINAL_VERIFICATION_REPORT.md  HANDOFF.md  HONEST_STATUS_ASSESSMENT.md  IMPLEMENTATION_PLAN_Q1_2026.md  LICENSE  MCP_BUGFIX_SUMMARY.md  MEMORY_BACKUP_RECOVERY.md  PRIORITIZED_INCOMPLETE_TASKS.md  PRIORITIZED_INCOMPLETE_TASKS_v99.md  PRODUCTION_IMPLEMENTATION_CHECKLIST.md  PRODUCTION_READINESS.md  README.md  REMEDIATION_PLAN.md  SECURITY.md  SESSION_NOTES_2026-01-13.md  VERIFICATION_REPORT.md  VISION.md  debug_stream.py  docker-compose.yml  extract_pdf.py  full_review_codes.md  install.sh  mcp.json  (+9 more)
.archive/: copilot-mcp-instructions.md  mimo-cognitive-agent.agent.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: copilot-instructions.md  copilot-mcp-instructions.md
_test_autodiscovery_73310/: mix.exs
_test_diagnostics_25424/: check_op.ex
_test_diagnostics_33377/: format_test.ex
_test_diagnostics_59907/: test.ex
_test_diagnostics_92745/: lint_op.ex
bench/: benchmark.ex  load_test.exs  load_test.js  runner.exs  (+2 more)
native/tree_sitter/: Cargo.toml
native/tree_sitter/.cargo/: config.toml
native/tree_sitter/src/: lib.rs
native/vector_math/: Cargo.toml
native/vector_math/.cargo/: config.toml
native/vector_math/src/: hnsw.rs  lib.rs
(+692 files in other folders)
