[package]
name = "tree_sitter_nif"
version = "0.1.0"
authors = ["Mimo-MCP Team"]
edition = "2021"

[lib]
name = "tree_sitter_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31"
# Pin tree-sitter to 0.24.7 which requires rustc 1.65+
tree-sitter = "=0.24.7"
# Pin tree-sitter-language to 0.1.3 which requires rustc 1.74.1 (compatible with 1.75)
tree-sitter-language = "=0.1.3"
# Pin language parsers to specific versions compatible with tree-sitter 0.24.x
tree-sitter-elixir = "=0.3.1"
tree-sitter-python = "=0.23.2"
tree-sitter-javascript = "=0.23.0"
tree-sitter-typescript = "=0.23.0"
# Required for QueryMatches iteration in tree-sitter 0.24+
streaming-iterator = "0.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
